--- a/css/master.css
+++ b/css/master.css
@@ -16,7 +16,7 @@
 
   body {
     /* set the background color here */
-    background-color: beige;
+    background-color: rgb(166, 166, 206);
     /* set the text color to black here */
     color: black;
     /* set the font here */
